data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1276.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\91\80\80\80\00\01\07\6d\6f\64\75\6c\65"
    "\42\05\66\75\6e\63\42\00\00\03\82\80\80\80\00\01"
    "\00\0a\9f\80\80\80\00\01\99\80\80\80\00\00\02\40"
    "\02\40\02\40\10\00\0c\02\0b\10\00\0c\01\0b\10\00"
    "\0c\00\0b\10\00\0b"
  )
""
)